@@ -3,6 +3,8 @@
    USE_BUILTIN_RIJNDAEL compat goop to openssl-compat.h so it can be
    shared with umac.c.  Allows building with OpenSSL 0.9.5 again including
    umac support.  With tim@ djm@, ok djm.
+ - (dtucker) [openbsd-compat/openssl-compat.h] Merge USE_BUILTIN_RIJNDAEL
+   sections.  Fixes builds with early OpenSSL 0.9.6 versions.
 
 20070612
  - (dtucker) OpenBSD CVS Sync
@@ -3067,4 +3069,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4700 2007/06/14 13:21:32 dtucker Exp $
+$Id: ChangeLog,v 1.4701 2007/06/14 13:38:39 dtucker Exp $
